# aml-gnn-upi

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  logging_config.py  settings.py
notebooks/: 01_eda_paysim.ipynb  02_feature_engineering.ipynb  03_pattern_analysis.ipynb
scripts/: __init__.py  benchmark_scalability.py  export_model.py  run_pipeline.py  run_pipeline_fast.py  run_streaming.py  train_and_compare.py
src/: __init__.py
src/api/: __init__.py  main.py  schemas.py
src/api/routes/: __init__.py  explain.py  health.py  predict.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: __init__.py  graph_viz.py  risk_meter.py
src/dashboard/pages/: __init__.py  graph_explorer.py  live_alerts.py  pattern_catalog.py
src/data/: __init__.py  download_paysim.py  graph_builder.py  preprocess.py  synthetic_data_generator.py
src/detection/: __init__.py  alert_generator.py  inference.py  patterns.py
src/explainability/: __init__.py  gnn_explainer.py  shap_features.py  visualize.py
src/models/: __init__.py  gat.py  graphsage.py  heterognn.py  loss.py  model_comparison.py  trainer.py
src/storage/: __init__.py  graph_loader.py  neo4j_client.py  queries.cypher
src/streaming/: generator.py  processor.py  redis_stream.py
src/utils/: report_generator.py
tests/: __init__.py  test_api.py  test_graph_builder.py  test_models.py
tests/fixtures/: __init__.py  sample_transactions.json
