[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aml-gnn-upi"
version = "0.1.0"
description = "Graph Neural Network-based AML fraud detection system for UPI transactions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "networkx>=3.0",
    "plotly>=5.15.0",
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "redis>=4.6.0",
    "pytest>=7.4.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "reportlab>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
